--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -136,9 +136,221 @@
    "execution_count": null,
    "id": "6dbe80bc",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"sepal.length\",\"sepal.width\",\"petal.length\",\"petal.width\",\"variety\"\n",
+      "5.1,3.5,1.4,.2,\"Setosa\"\n",
+      "4.9,3,1.4,.2,\"Setosa\"\n",
+      "4.7,3.2,1.3,.2,\"Setosa\"\n",
+      "4.6,3.1,1.5,.2,\"Setosa\"\n",
+      "5,3.6,1.4,.2,\"Setosa\"\n",
+      "5.4,3.9,1.7,.4,\"Setosa\"\n",
+      "4.6,3.4,1.4,.3,\"Setosa\"\n",
+      "5,3.4,1.5,.2,\"Setosa\"\n",
+      "4.4,2.9,1.4,.2,\"Setosa\"\n",
+      "4.9,3.1,1.5,.1,\"Setosa\"\n",
+      "5.4,3.7,1.5,.2,\"Setosa\"\n",
+      "4.8,3.4,1.6,.2,\"Setosa\"\n",
+      "4.8,3,1.4,.1,\"Setosa\"\n",
+      "4.3,3,1.1,.1,\"Setosa\"\n",
+      "5.8,4,1.2,.2,\"Setosa\"\n",
+      "5.7,4.4,1.5,.4,\"Setosa\"\n",
+      "5.4,3.9,1.3,.4,\"Setosa\"\n",
+      "5.1,3.5,1.4,.3,\"Setosa\"\n",
+      "5.7,3.8,1.7,.3,\"Setosa\"\n",
+      "5.1,3.8,1.5,.3,\"Setosa\"\n",
+      "5.4,3.4,1.7,.2,\"Setosa\"\n",
+      "5.1,3.7,1.5,.4,\"Setosa\"\n",
+      "4.6,3.6,1,.2,\"Setosa\"\n",
+      "5.1,3.3,1.7,.5,\"Setosa\"\n",
+      "4.8,3.4,1.9,.2,\"Setosa\"\n",
+      "5,3,1.6,.2,\"Setosa\"\n",
+      "5,3.4,1.6,.4,\"Setosa\"\n",
+      "5.2,3.5,1.5,.2,\"Setosa\"\n",
+      "5.2,3.4,1.4,.2,\"Setosa\"\n",
+      "4.7,3.2,1.6,.2,\"Setosa\"\n",
+      "4.8,3.1,1.6,.2,\"Setosa\"\n",
+      "5.4,3.4,1.5,.4,\"Setosa\"\n",
+      "5.2,4.1,1.5,.1,\"Setosa\"\n",
+      "5.5,4.2,1.4,.2,\"Setosa\"\n",
+      "4.9,3.1,1.5,.2,\"Setosa\"\n",
+      "5,3.2,1.2,.2,\"Setosa\"\n",
+      "5.5,3.5,1.3,.2,\"Setosa\"\n",
+      "4.9,3.6,1.4,.1,\"Setosa\"\n",
+      "4.4,3,1.3,.2,\"Setosa\"\n",
+      "5.1,3.4,1.5,.2,\"Setosa\"\n",
+      "5,3.5,1.3,.3,\"Setosa\"\n",
+      "4.5,2.3,1.3,.3,\"Setosa\"\n",
+      "4.4,3.2,1.3,.2,\"Setosa\"\n",
+      "5,3.5,1.6,.6,\"Setosa\"\n",
+      "5.1,3.8,1.9,.4,\"Setosa\"\n",
+      "4.8,3,1.4,.3,\"Setosa\"\n",
+      "5.1,3.8,1.6,.2,\"Setosa\"\n",
+      "4.6,3.2,1.4,.2,\"Setosa\"\n",
+      "5.3,3.7,1.5,.2,\"Setosa\"\n",
+      "5,3.3,1.4,.2,\"Setosa\"\n",
+      "7,3.2,4.7,1.4,\"Versicolor\"\n",
+      "6.4,3.2,4.5,1.5,\"Versicolor\"\n",
+      "6.9,3.1,4.9,1.5,\"Versicolor\"\n",
+      "5.5,2.3,4,1.3,\"Versicolor\"\n",
+      "6.5,2.8,4.6,1.5,\"Versicolor\"\n",
+      "5.7,2.8,4.5,1.3,\"Versicolor\"\n",
+      "6.3,3.3,4.7,1.6,\"Versicolor\"\n",
+      "4.9,2.4,3.3,1,\"Versicolor\"\n",
+      "6.6,2.9,4.6,1.3,\"Versicolor\"\n",
+      "5.2,2.7,3.9,1.4,\"Versicolor\"\n",
+      "5,2,3.5,1,\"Versicolor\"\n",
+      "5.9,3,4.2,1.5,\"Versicolor\"\n",
+      "6,2.2,4,1,\"Versicolor\"\n",
+      "6.1,2.9,4.7,1.4,\"Versicolor\"\n",
+      "5.6,2.9,3.6,1.3,\"Versicolor\"\n",
+      "6.7,3.1,4.4,1.4,\"Versicolor\"\n",
+      "5.6,3,4.5,1.5,\"Versicolor\"\n",
+      "5.8,2.7,4.1,1,\"Versicolor\"\n",
+      "6.2,2.2,4.5,1.5,\"Versicolor\"\n",
+      "5.6,2.5,3.9,1.1,\"Versicolor\"\n",
+      "5.9,3.2,4.8,1.8,\"Versicolor\"\n",
+      "6.1,2.8,4,1.3,\"Versicolor\"\n",
+      "6.3,2.5,4.9,1.5,\"Versicolor\"\n",
+      "6.1,2.8,4.7,1.2,\"Versicolor\"\n",
+      "6.4,2.9,4.3,1.3,\"Versicolor\"\n",
+      "6.6,3,4.4,1.4,\"Versicolor\"\n",
+      "6.8,2.8,4.8,1.4,\"Versicolor\"\n",
+      "6.7,3,5,1.7,\"Versicolor\"\n",
+      "6,2.9,4.5,1.5,\"Versicolor\"\n",
+      "5.7,2.6,3.5,1,\"Versicolor\"\n",
+      "5.5,2.4,3.8,1.1,\"Versicolor\"\n",
+      "5.5,2.4,3.7,1,\"Versicolor\"\n",
+      "5.8,2.7,3.9,1.2,\"Versicolor\"\n",
+      "6,2.7,5.1,1.6,\"Versicolor\"\n",
+      "5.4,3,4.5,1.5,\"Versicolor\"\n",
+      "6,3.4,4.5,1.6,\"Versicolor\"\n",
+      "6.7,3.1,4.7,1.5,\"Versicolor\"\n",
+      "6.3,2.3,4.4,1.3,\"Versicolor\"\n",
+      "5.6,3,4.1,1.3,\"Versicolor\"\n",
+      "5.5,2.5,4,1.3,\"Versicolor\"\n",
+      "5.5,2.6,4.4,1.2,\"Versicolor\"\n",
+      "6.1,3,4.6,1.4,\"Versicolor\"\n",
+      "5.8,2.6,4,1.2,\"Versicolor\"\n",
+      "5,2.3,3.3,1,\"Versicolor\"\n",
+      "5.6,2.7,4.2,1.3,\"Versicolor\"\n",
+      "5.7,3,4.2,1.2,\"Versicolor\"\n",
+      "5.7,2.9,4.2,1.3,\"Versicolor\"\n",
+      "6.2,2.9,4.3,1.3,\"Versicolor\"\n",
+      "5.1,2.5,3,1.1,\"Versicolor\"\n",
+      "5.7,2.8,4.1,1.3,\"Versicolor\"\n",
+      "6.3,3.3,6,2.5,\"Virginica\"\n",
+      "5.8,2.7,5.1,1.9,\"Virginica\"\n",
+      "7.1,3,5.9,2.1,\"Virginica\"\n",
+      "6.3,2.9,5.6,1.8,\"Virginica\"\n",
+      "6.5,3,5.8,2.2,\"Virginica\"\n",
+      "7.6,3,6.6,2.1,\"Virginica\"\n",
+      "4.9,2.5,4.5,1.7,\"Virginica\"\n",
+      "7.3,2.9,6.3,1.8,\"Virginica\"\n",
+      "6.7,2.5,5.8,1.8,\"Virginica\"\n",
+      "7.2,3.6,6.1,2.5,\"Virginica\"\n",
+      "6.5,3.2,5.1,2,\"Virginica\"\n",
+      "6.4,2.7,5.3,1.9,\"Virginica\"\n",
+      "6.8,3,5.5,2.1,\"Virginica\"\n",
+      "5.7,2.5,5,2,\"Virginica\"\n",
+      "5.8,2.8,5.1,2.4,\"Virginica\"\n",
+      "6.4,3.2,5.3,2.3,\"Virginica\"\n",
+      "6.5,3,5.5,1.8,\"Virginica\"\n",
+      "7.7,3.8,6.7,2.2,\"Virginica\"\n",
+      "7.7,2.6,6.9,2.3,\"Virginica\"\n",
+      "6,2.2,5,1.5,\"Virginica\"\n",
+      "6.9,3.2,5.7,2.3,\"Virginica\"\n",
+      "5.6,2.8,4.9,2,\"Virginica\"\n",
+      "7.7,2.8,6.7,2,\"Virginica\"\n",
+      "6.3,2.7,4.9,1.8,\"Virginica\"\n",
+      "6.7,3.3,5.7,2.1,\"Virginica\"\n",
+      "7.2,3.2,6,1.8,\"Virginica\"\n",
+      "6.2,2.8,4.8,1.8,\"Virginica\"\n",
+      "6.1,3,4.9,1.8,\"Virginica\"\n",
+      "6.4,2.8,5.6,2.1,\"Virginica\"\n",
+      "7.2,3,5.8,1.6,\"Virginica\"\n",
+      "7.4,2.8,6.1,1.9,\"Virginica\"\n",
+      "7.9,3.8,6.4,2,\"Virginica\"\n",
+      "6.4,2.8,5.6,2.2,\"Virginica\"\n",
+      "6.3,2.8,5.1,1.5,\"Virginica\"\n",
+      "6.1,2.6,5.6,1.4,\"Virginica\"\n",
+      "7.7,3,6.1,2.3,\"Virginica\"\n",
+      "6.3,3.4,5.6,2.4,\"Virginica\"\n",
+      "6.4,3.1,5.5,1.8,\"Virginica\"\n",
+      "6,3,4.8,1.8,\"Virginica\"\n",
+      "6.9,3.1,5.4,2.1,\"Virginica\"\n",
+      "6.7,3.1,5.6,2.4,\"Virginica\"\n",
+      "6.9,3.1,5.1,2.3,\"Virginica\"\n",
+      "5.8,2.7,5.1,1.9,\"Virginica\"\n",
+      "6.8,3.2,5.9,2.3,\"Virginica\"\n",
+      "6.7,3.3,5.7,2.5,\"Virginica\"\n",
+      "6.7,3,5.2,2.3,\"Virginica\"\n",
+      "6.3,2.5,5,1.9,\"Virginica\"\n",
+      "6.5,3,5.2,2,\"Virginica\"\n",
+      "6.2,3.4,5.4,2.3,\"Virginica\"\n",
+      "5.9,3,5.1,1.8,\"Virginica\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# file operations\n",
+    "# Read a file\n",
+    "with open('iris.csv', mode='r') as file:\n",
+    "    content = file.read()\n",
+    "    print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1c0cf926",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name,age\n",
+      "Sam,43\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read line by line\n",
+    "with open('example.csv', 'r') as file:\n",
+    "    for line in file:\n",
+    "        print(line.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "92f833e0",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "# writing a file\n",
+    "with open('example.txt', 'a') as file: # a -> append, w -> write \n",
+    "    file.write('This is my new file')\n",
+    "    file.write('Hello world')\n",
+    "\n",
+    "# writing a list of lines to a file\n",
+    "lines=['First line\\n', 'Second line\\n', 'Third line \\n']\n",
+    "with open('example.txt', 'a') as file:\n",
+    "    file.writelines(lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abe702d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Binary files\n"
    ]
   }
  ],
