--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -327,13 +327,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "92f833e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# writing a file\n",
-    "with open('example.txt', 'a') as file: # a -> append, w -> write \n",
+    "with open('example.txt', 'a') as file: # a -> append, w -> write, w+ -> read and write\n",
     "    file.write('This is my new file')\n",
     "    file.write('Hello world')\n",
     "\n",
@@ -423,8 +423,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "b85678d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love Singapore\n",
+      "Also Illinois\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# writing then reading the fiel\n",
+    "with open('example2.txt', 'w+') as file:\n",
+    "    file.write('I love Singapore\\n')\n",
+    "    file.write('Also Illinois\\n')\n",
+    "\n",
+    "    # move the file cursor to the beginning\n",
+    "    file.seek(0)\n",
+    "    content = file.read()\n",
+    "    print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "754598ca",
    "metadata": {},
    "outputs": [],
    "source": []
